ajax added for main pages miss: Upload Search* LoggedIn

--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -13,7 +13,7 @@
 		{% block header %}
 			{% include 'MTIMusicAndMeBundle:Header:header.html.twig' with {'user_name': user_name, 'is_connected': is_connected} %}
 		{% endblock %}
-		<div class="container">
+		<div class="container" id="block-content">
 		{% block content %}{% endblock %}
 		</div>
 		<!-- {% block footer %}
