--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -1,10 +1,13 @@
+<form class="navbar-search pull-left" action="{{ path('MTIMusicAndMeBundle_search') }}" method="POST">
+	<input type="text" class="search-query span2" placeholder="Rechercher un flux" name="searchFlux">
+</form>
 {% if is_connected %}
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> {{ user_name }} <b class="caret"></b></a>
 	<ul class="dropdown-menu">
-		<li><a href="{{ path('MTIMusicAndMeBundle_account') }}">Mon compte</a></li>
-		<li><a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}">Mes flux</a></li>
-		<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}">Upload</a></li>
+	<li><a href="{{ path('MTIMusicAndMeBundle_account') }}" onclick="callAjax('', '/account/'); return false;">Mon compte</a></li>
+	<li><a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}" onclick="callAjax('', '/stream/'); return false;">Mes flux</a></li>
+	<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}" onclick="callAjax('', '/upload/'); return false;">Upload</a></li>
 		<li class="divider"></li>
 		<li><a href="{{ path('MTIMusicAndMeBundle_logout') }}">Déconnexion</a></li>
 	</ul>
