--- a/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.ajax.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.ajax.twig
@@ -10,7 +10,7 @@
 	<h2>Upload de musiques</h2>
 	<div class="row">
 		<div class="span12">
-			<form class="form-horizontal" action="#" method="post" {{ form_enctype(form) }}>
+			<form class="form-horizontal" id="form_upload" action="#" method="post" {{ form_enctype(form) }}>
 			<fieldset>
 			<legend>Choisissez votre musique ou un zip en contenant</legend>
 						<div class="controls">
