--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
@@ -1,5 +1,5 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
-	{% include 'MTIMusicAndMeBundle:Search:viewSearchZik.ajax.twig' with {'toSearch' : toSearch} %}
+	{% include 'MTIMusicAndMeBundle:Search:viewSearchZik.ajax.twig' %}
 {% endblock %}
