--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.ajax.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.ajax.twig
@@ -1,10 +1,10 @@
 <span id="reload-header" data-reload-value="false" style="{display:none}"></span>
 <ul class="breadcrumb">
 <li>
-<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
+<a href="{{ path('MTIMusicAndMeBundle_homepage') }}" onclick="callAjax('', '/'); return false;">Music &amp; Me</a> <span class="divider">/</span>
 </li>
 <li>
-<a href="{{ path('MTIMusicAndMeBundle_searchZik') }}">Recherche de musique</a> <span class="divider">/</span>
+<a href="{{ path('MTIMusicAndMeBundle_searchZik') }}" onclick="callAjax('', '/searchzik/'); return false;">Recherche de musique</a> <span class="divider">/</span>
 </li>
 <li class="active">{{ toSearch }}</li>
 </ul>
@@ -27,7 +27,7 @@
 		{% for zik in listeZik %}
 			<tr>
 				<td>
-				<img class="thumbnail" src="{{ zik.album.getCoverPath() }}" alt="">
+				<img class="thumbnail" src="../{{ zik.album.getCoverPath() }}" alt="">
 				</td>
 				<td>{{ zik.title }}</td>
 				<td>{{ zik.album.title }}</td>
