--- a/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.ajax.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.ajax.twig
@@ -1,7 +1,7 @@
 <span id="reload-header" data-reload-value="false" style="{display:none}"></span>
 <ul class="breadcrumb">
 <li>
-<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
+<a href="{{ path('MTIMusicAndMeBundle_homepage') }}" onclick="callAjax('', '/'); return false;">Music &amp; Me</a> <span class="divider">/</span>
 </li>
 <li class="active">Upload</li>
 </ul>
@@ -10,7 +10,7 @@
 	<h2>Upload de musiques</h2>
 	<div class="row">
 		<div class="span12">
-			<form class="form-horizontal" id="form_upload" action="#" method="post" {{ form_enctype(form) }}>
+			<form class="form-horizontal" id="form_upload" action="" method="post" {{ form_enctype(form) }}>
 			<fieldset>
 			<legend>Choisissez votre musique ou un zip en contenant</legend>
 						<div class="controls">
