--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
@@ -11,7 +11,7 @@
 <section id="form">
 		<div class="row">
 			<div class="span12">
-				<form class="form-horizontal" action="#" method="post">
+				<form class="form-horizontal" action="" method="post">
 				  <input type="text" class="search-query span2" placeholder="Rechercher une musique" name="searchZik">
 				</form>
 			</div>
