--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZiknull.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZiknull.html.twig
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="span12">
 			<h3>Aucun résulat n'a été trouvé pour la recherche {{ toSearch }}</h3><br/>
-				<form class="form-horizontal" action="#" method="post">
+				<form class="form-horizontal" action="" method="post">
 				  <input type="text" class="search-query span2" placeholder="Rechercher une musique" name="searchZik">
 				</form>
 			</div>
