--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -18,8 +18,8 @@
 			<h3>&ensp;</h3>
 		</div>
 		<div id="stream-id" style="display: none;">{{ stream.id }}</div>
+		{% if current_record %}
 		<table class="table">
-			{% if current_record %}
 			<thead>
 				<tr>
 					<th></th>
@@ -32,9 +32,9 @@
 				<tr>
 					<td class="music-id" style="display: none;">{{ current_record.music.id }}</td>
 					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+						<img class="thumbnail" src="{{ current_record.music.album.getCoverPath() }}" alt="">
 					</td>
-					<td>{{ current_record.music.title }} — {{ current_record.music.album.artiste.name }} — {{ current_record.music.album.title }}</td>
+					<td>{{ current_record.music.title }} — {{ current_record.music.getAlbum().getArtiste().getName() }} — {{ current_record.music.album.title }}</td>
 					<td><span class="label label-important">En ce moment</span></td>
 					<td>
 						<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
@@ -45,7 +45,7 @@
 				<tr>
 					<td class="music-id" style="display: none;">{{ next_records[i].music.id }}</td>
 					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+						<img class="thumbnail" src="{{ next_records[i].music.album.getCoverPath() }}" alt="">
 					</td>
 					<td>{{ next_records[i].music.title }} — {{ next_records[i].music.album.artiste.name }} — {{ next_records[i].music.album.title }}</td>
 					<td><span class="badge"><span class="vote-count">{{ next_records_votes[i] }}</span> vote{% if next_records_votes[i] > 1 %}s{% endif %}</span></td>
@@ -62,7 +62,9 @@
 				{% endfor %}
 				{% endif %}
 			</tbody>
-			{% endif %}
 		</table>
+		{% else %}
+			<a href="{{ path('MTIMusicAndMeBundle_searchZik', { 'stream_id' : stream.id }) }}" class="btn btn-primary">Ajouter une musique au flux</a>
+		{% endif %}
 	</section>
 {% endblock %}
