--- a/src/MTI/MusicAndMeBundle/Resources/views/Player/player.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Player/player.html.twig
@@ -3,12 +3,12 @@
 		<div class="container">
 			<ul class="nav pull-left">
 
-    <div id="erwan" class="jp-jplayer"></div>
+    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
     <div id="jp_container_1" class="jp-audio">
             <div class="jp-type-single">
                     <div class="jp-gui jp-interface">
                             <ul class="jp-controls">
-                                    <li><a href="javascript:my_play('http://127.0.0.1/MusicAndMe/next.php');" class="jp-play" tabindex="1">play</a></li>
+                                    <li><a href="" onclick="my_play('http://127.0.1.1/MusicAndMe/next.php');" class="jp-play" tabindex="1">play</a></li>
                                     <li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
                                     <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
                                     <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
