--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -7,7 +7,7 @@
 	<ul class="dropdown-menu">
 	<li><a href="{{ path('MTIMusicAndMeBundle_account') }}" onclick="callAjax('', '/account/'); return false;">Mon compte</a></li>
 	<li><a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}" onclick="callAjax('', '/stream/'); return false;">Mes flux</a></li>
-	<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}" onclick="callAjax('', '/upload/'); return false;">Upload</a></li>
+	<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}">Upload</a></li>
 		<li class="divider"></li>
 		<li><a href="{{ path('MTIMusicAndMeBundle_logout') }}">Déconnexion</a></li>
 	</ul>
