--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -8,6 +8,39 @@
 		%}
 		<link rel="stylesheet" href="{{ asset_url }}" />
 		{% endstylesheets %}
+		{% javascripts
+		'@MTIMusicAndMeBundle/Resources/public/js/jquery-1.7.1.min.js'
+		'@MTIMusicAndMeBundle/Resources/public/js/jquery.jplayer.min.js'
+		'@MTIMusicAndMeBundle/Resources/public/js/playerScript.js'
+		%}
+		<script src="{{ asset_url }}"></script>
+		{% endjavascripts %}
+		
+		{% block javascript %}
+		<script type="text/javascript">
+		$(document).ready(function(){
+			
+			$("#jquery_jplayer_1").jPlayer({
+				ready: function (event) {
+					$(this).jPlayer("setMedia", {
+						mp3:""
+					});
+				},
+		    
+		    ended: function() {
+			    $(this).jPlayer("play"); // Repeat the media
+		    },
+		    
+		    swfPath: "http://127.0.1.1/MusicAndMe/jquery",
+		    supplied: "mp3",
+		    wmode: "window"
+		});
+		
+		$("#jplayer_inspector").jPlayerInspector({jPlayer:$("#jquery_jplayer_1")});
+		});
+		
+		</script>
+		{% endblock %}
 	</head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50" data-twttr-rendered="true">
 		{% block header %}
@@ -24,7 +57,11 @@
 			'@MTIMusicAndMeBundle/Resources/public/js/bootstrap.js'
 			'@MTIMusicAndMeBundle/Resources/public/js/script.js'
 		%}
+		
 		<script src="{{ asset_url }}"></script>
 		{% endjavascripts %}
+		{% block player %}
+			{% include 'MTIMusicAndMeBundle:Player:player.html.twig' %}
+		{% endblock %}
 	</body>
 </html>
