--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.ajax.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.ajax.twig
@@ -11,7 +11,9 @@
 <section id="search-zik">
 
 	<div>
-		<h3>&ensp;</h3>
+		<form class="form-horizontal" action="#" method="post" id="search-zik-form">
+			<input type="text" class="search-query span2" placeholder="Rechercher une musique" name="searchZik" id="searchZikId">
+		</form>
 	</div>
 	<table class="table">
 		<thead>
