--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.ajax.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.ajax.twig
@@ -9,7 +9,7 @@
 <section id="form">
 	<div class="row">
 		<div class="span12">
-			<form class="form-horizontal" action="#" method="post" id="search-zik-form">
+			<form class="form-horizontal" action="" method="post" id="search-zik-form">
 				<input type="text" class="search-query span2" placeholder="Rechercher une musique" name="searchZik" id="searchZikId">
 			</form>
 		</div>
