--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -28,7 +28,7 @@
                                     },
 
                                     ended: function() {
-                                        $(this).jPlayer("play"); // Repeat the media
+                                        my_play(); // Repeat the media
                                     },
 
                                     swfPath: "http://127.0.1.1/MusicAndMe/jquery",
@@ -58,8 +58,11 @@
 		%}
 		<script src="{{ asset_url }}"></script>
 		{% endjavascripts %}
-		{% block player %}
-			{% include 'MTIMusicAndMeBundle:Player:player.html.twig' %}
-		{% endblock %}
+
+                {#{% if playing == false %}#}
+                    {% block player %}
+                            {% include 'MTIMusicAndMeBundle:Player:player.html.twig' %}
+                    {% endblock %}
+                {#{% endif %}#}
 	</body>
 </html>
