--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -80,37 +80,14 @@ header {
 
 /* @group Player */
 
-.player > span {
-	/*display: inline-block;
-	height: 100%;
-	background-color: #777;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-	-webkit-transition: width .4s ease-in-out;
-	-moz-transition: width .4s ease-in-out;
-	-ms-transition: width .4s ease-in-out;
-	-o-transition: width .4s ease-in-out;
-	transition: width .4s ease-in-out;*/
+#player {
+	height: 80px;
 }
 
-.player {
-	/*background-color: #9c9c9c;
-	height: 15px;
-	padding: 3px;
-	width: 100%;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	-moz-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
-	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
-	box-shadow: 0 1px 5px #777 inset, 0 1px 0 #777;*/
+#player .progress {
+	vertical-align: bottom;
+	margin: 10px;
 }
-
-
 
 /* @end */
 
