Made some corrections in the templates.

--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -4,7 +4,7 @@
 	<ul class="dropdown-menu">
 		<li><a href="{{ path('MTIMusicAndMeBundle_account') }}">Mon compte</a></li>
 		<li><a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}">Mes flux</a></li>
-		<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}">Upload</a></li>
+		<li><a href="{{ path('MTIMusicAndMeBundle_upload') }}">Envoyer de la musique</a></li>
 		<li class="divider"></li>
 		<li><a href="{{ path('MTIMusicAndMeBundle_logout') }}">Déconnexion</a></li>
 	</ul>
