--- a/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
@@ -14,15 +14,19 @@
 		<div class="row">
 			<div class="span4">
 				<h2>Écoutez</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</div>
-			<div class="span4">
-				<h2>Diffusez</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>toute votre musique à porté de main grâce à
+flux et vos playlists. Electro, pop, rock, ...<br/>Faites-vous plaisir en écoutant la musique
+que vous aimez où que vous soyez.</p>
 			</div>
 			<div class="span4">
 				<h2>Partagez</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>la musique qui vous fait vibrer, découvrez de
+nouveaux horizons en écoutant les playlists partagées.<br/>Et faites-les découvrir
+à tous vos amis.</p>
+			</div>
+			<div class="span4">
+				<h2>Let's go !</h2>
+				<p>Tout est prêt pour passer une excellente soirée.</p>
 			</div>
 		</div>
 	</section>
