--- a/src/MTI/MusicAndMeBundle/Resources/views/Home/indexLoggedIn.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Home/indexLoggedIn.html.twig
@@ -1,159 +1,5 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
-	<ul class="breadcrumb">
-		<li class="active">Music &amp; Me</li>
-	</ul>
-	<section id="my-streams">
-		<div class="page-header">
-			<h1>Mes flux</h1>
-		</div>
-		<div class="row">
-			<div class="span12">
-				<ul class="thumbnails">
-					<li class="span2">
-						<div class="thumbnail create-stream tip" data-placement="bottom" rel="popover" data-original-title="Créer un nouveau flux">
-							<a href="{{ path('MTIMusicAndMeBundle_streamCreate') }}"><img src="/images/add.png" alt="" /></a>
-						</div>
-					</li>
-					{% for stream in my_streams %}
-					<li class="span2">
-						<div class="thumbnail actual-stream">
-							<a href="{{ path('MTIMusicAndMeBundle_streamView') }}/{{ stream.id }}"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>{{ stream.name }}</h5>
-								<p style="display: none;" class="stream-id">{{ stream.id }}</p>
-								<p class="music-name">Aucune lecture en cours</p>
-								<p class="music-artist"></p>
-								<p class="music-album"></p>
-							</div>
-						</div>
-					</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-	</section>
-	<section id="last-streams">
-		<div class="page-header">
-			<h1>Mes dernières lectures de flux</h1>
-		</div>
-		<div class="row">
-			<div class="span12">
-				<ul class="thumbnails">
-					<li class="span2">
-						<div class="thumbnail create-stream tip" data-placement="bottom" rel="popover" data-original-title="Créer un nouveau flux">
-							<a href="{{ path('MTIMusicAndMeBundle_streamCreate') }}"><img src="/images/add.png" alt="" /></a>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<section id="most-listened-streams">
-		<div class="page-header">
-			<h1>Les flux les plus écoutés sur Music & Me</h1>
-		</div>
-		<div class="row">
-			<div class="span12">
-				<ul class="thumbnails">
-					<li class="span2">
-						<div class="thumbnail create-stream tip" data-placement="bottom" rel="popover" data-original-title="Créer un nouveau flux">
-							<a href="{{ path('MTIMusicAndMeBundle_streamCreate') }}"><img src="/images/add.png" alt="" /></a>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-					<li class="span2">
-						<div class="thumbnail">
-							<a href="#"><img src="/images/cover.jpg" alt="" /></a>
-							<div class="caption">
-								<h5>Titre du flux</h5>
-								<p>5 écoutes</p>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</section>
+	{% include 'MTIMusicAndMeBundle:Home:indexLoggedIn.ajax.twig' with {'my_streams' : my_streams} %}
 {% endblock %}
