--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearchZik.html.twig
@@ -30,7 +30,7 @@
 				<tr>
 					<td class="music-id" style="display: none;">{{ zik.id }}</td>
 					<td>
-					<img class="thumbnail" src="{{ zik.album.getCoverPath() }}" alt="">
+					<img class="thumbnail" src="../{{ zik.album.getCoverPath() }}" alt="">
 					</td>
 					<td>{{ zik.title }}</td>
 					<td>{{ zik.album.title }}</td>
