--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header.html.twig
@@ -2,7 +2,7 @@
 	<div class="navbar-inner">
 		<div class="container">
 			<ul class="nav pull-left">
-				<a class="brand" href="{{ path('MTIMusicAndMeBundle_homepage') }}" onclick="callAjax('', '/'); return false;">
+				<a class="brand" href="{{ path('MTIMusicAndMeBundle_homepage') }}">
 					<img src="{{ asset('images/logo3.png') }}" />
 				</a>
 			</ul>
