searchflux now available

--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearch.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearch.html.twig
@@ -4,7 +4,7 @@
 <span id="reload-header" data-reload-value="false" style="{display:none}"></span>
 <ul class="breadcrumb">
 	<li>
-	<a href="{{ path('MTIMusicAndMeBundle_homepage') }}" onclick="callAjax('', '/'); return false;">Music &amp; Me</a> <span class="divider">/</span>
+	<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
 	</li>
 	<li class="active">Recherche de flux<span class="divider">></span><span id="search_text">{{ toSearch }}</span></li>
 </ul>
@@ -17,23 +17,13 @@
 		<tbody>
 			{% for stream in listeStream %}
 			<tr>
+				<td id="stream-id" style="display: none;">{{ stream.id }}</td>
 				<td>
-					<!--<div class="multi-cover">
-					<table class="multi-cover-table">
-					<tr>
-						<td><img class="multi-cover-img" src="../images/cover_thumb.jpg" alt=""></td>
-						<td><img class="multi-cover-img" src="../images/cover_thumb.jpg" alt=""></td>
-					</tr>
-					<tr>
-						<td><img class="multi-cover-img" src="../images/cover_thumb.jpg" alt=""></td>
-						<td><img class="multi-cover-img" src="../images/cover_thumb.jpg" alt=""></td>
-					</tr>
-					</table>
-					</div>-->
+				<img class="thumbnail" src="{% if listCur[stream.id] %}{{ listCur[stream.id].music.album.getCoverPath() }}{% else %}{% endif %}" alt="">
 				</td>
 				<td>{{ stream.name }}</td>
-				<td>{{ stream.owner.firstname }}{{ stream.owner.lastname }}</td>
-				<td><span class="label label-important">12</span></td>
+				<td>{{ stream.owner.firstname }} {{ stream.owner.lastname }}</td>
+				<td>{% if listCur[stream.id] %}{{ listCur[stream.id].music.title }}{% else %}Aucune musique n'est actuellement jouée{% endif %}</span></td>
 				<td>
 					<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
 				</td>
