--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearch.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/resultSearch.html.twig
@@ -19,13 +19,13 @@
 			<tr>
 				<td id="stream-id" style="display: none;">{{ stream.id }}</td>
 				<td>
-				<img class="thumbnail" src="{% if listCur[stream.id] %}{{ listCur[stream.id].music.album.getCoverPath() }}{% else %}{% endif %}" alt="">
+				<img class="thumbnail" src="{% if listCur[stream.id] %}{{ listCur[stream.id].music.album.getCoverPath() }}{% else %}/images/placeholder.png{% endif %}" alt="">
 				</td>
 				<td>{{ stream.name }}</td>
 				<td>{{ stream.owner.firstname }} {{ stream.owner.lastname }}</td>
 				<td>{% if listCur[stream.id] %}{{ listCur[stream.id].music.title }}{% else %}Aucune musique n'est actuellement jouée{% endif %}</span></td>
 				<td>
-					<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
+					<div class="btn" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-zoom-in icon-black"></i></div>
 				</td>
 			</tr>
 			{% endfor %}
