--- a/src/MTI/MusicAndMeBundle/Resources/views/UI/player.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/UI/player.html.twig
@@ -5,7 +5,7 @@
 			<span style="display:none;">plop</span>
 			<audio id="player-object">
 			</audio>
-			<div style="height: 18px; margin: 10px; display: inline-block; float: left;" class="btn" data-placement="bottom" rel="popover" data-original-title="Arrêter la lecture"><i class="icon-stop icon-black"></i></div>
+			<div id="stop-in-player" style="height: 18px; margin: 10px; display: inline-block; float: left;" class="btn" data-placement="bottom" rel="popover" data-original-title="Arrêter la lecture"><i class="icon-stop icon-black"></i></div>
 			<div style="height: 28px;" class="progress">
 				<div style="height: 28px;" class="bar"
 				style="width: 0%;"></div>
