--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -35,7 +35,7 @@
 				<h4 class="alert-heading"></h4>
 				<span></span>
 			</div>
-		{% block content %}{% endblock %}
+		<div id="content">{% block content %}{% endblock %}</div>
 		</div>
 		{% block footer %}
 			{% include 'MTIMusicAndMeBundle:UI:player.html.twig' %}
