--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -1,77 +1,5 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
-    <div id="refresh-content" style="display: none;"></div>
-	<ul class="breadcrumb">
-		<li>
-			<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
-		</li>
-		<li>
-			<a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}">Mes flux</a> <span class="divider">/</span>
-		</li>
-		<li class="active">{{ stream.name }}</li>
-	</ul>
-	<section id="stream-musics">
-		<div class="page-header">
-			<h1>{{ stream.name }}</h1>
-		</div>
-		<div>
-			<h3>&ensp;</h3>
-		</div>
-		<div id="stream-id" style="display: none;">{{ stream.id }}</div>
-		{% if current_record %}
-		<table class="table">
-			<thead>
-				<tr>
-					<th></th>
-					<th>Musique</th>
-					<th>Status</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td class="music-id" style="display: none;">{{ current_record.music.id }}</td>
-					<td>
-						<img class="thumbnail" src="{{ current_record.music.album.getCoverPath() }}" alt="">
-					</td>
-					<td>{{ current_record.music.title }} — {{ current_record.music.getAlbum().getArtiste().getName() }} — {{ current_record.music.album.title }}</td>
-					<td><span class="label label-important">En ce moment</span></td>
-					<td>
-						{% if app.session.get('playing_stream') == stream.id %}
-						<div style="display: none;" class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
-						<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Arrêter la lecture"><i class="icon-stop icon-white"></i></div>
-						{% else %}
-						<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
-						<div style="display: none;" class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Arrêter la lecture"><i class="icon-stop icon-white"></i></div>
-						{% endif %}
-					</td>
-				</tr>
-				{% if records_count %}
-				{% for i in range(0, records_count - 1) %}
-				<tr>
-					<td class="music-id" style="display: none;">{{ next_records[i].music.id }}</td>
-					<td class="record-id" style="display: none;">{{ next_records[i].getId() }}</td>
-					<td>
-						<img class="thumbnail" src="{{ next_records[i].music.album.getCoverPath() }}" alt="">
-					</td>
-					<td>{{ next_records[i].music.title }} — {{ next_records[i].music.album.artiste.name }} — {{ next_records[i].music.album.title }}</td>
-					<td><span class="badge"><span class="vote-count">{{ next_records_votes[i] }}</span> vote{% if next_records_votes[i] > 1 %}s{% endif %}</span></td>
-					{% if next_records_has_voted[i] %}
-					<td>
-						<div class="btn btn-success disabled"><i class="icon-ok icon-white"></i></div>
-					</td>
-					{% else %}
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
-					</td>
-					{% endif %}
-				</tr>
-				{% endfor %}
-				{% endif %}
-			</tbody>
-		</table>
-		{% endif %}
-		<a href="{{ path('MTIMusicAndMeBundle_searchZik', { 'stream_id' : stream.id }) }}" class="btn">Ajouter une musique au flux</a>
-	</section>
+    {% include 'MTIMusicAndMeBundle:Stream:view.ajax.twig' %}
 {% endblock %}
